Use uv for dependencies and ruff for linting in CI

--- a/notebooks/customer_gen.ipynb
+++ b/notebooks/customer_gen.ipynb
@@ -15,8 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import polars as pl\n",
-    "import requests"
+    "import polars as pl"
    ]
   },
   {
